--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,7 +26,7 @@ body {
   color: #d9dcd6;
 }
 /* class .header and element div attributes */
-.header div {
+.header nav {
   padding-top: 15px;
   margin-right: 20px;
   float: right;
@@ -34,11 +34,11 @@ body {
   font-size: 20px;
 }
 /* class .header element div element ul attributes */
-.header div ul {
+.header nav ul {
   list-style-type: none;
 }
 
-.header div ul li {
+.header nav ul li {
   display: inline-block;
   margin-left: 25px;
 }
